# amv-cpp

./: CMakeLists.txt  README.md  amvdox.cfg
design/: navigate.bpmn  steering-logical.bpmn20.xml
design/processes/: location.bpmn20.xml  steering.bpmn20.xml
src/: amv_configuration.cpp  amv_configuration.hxx  main.cpp
src/collection/: name_value_pair.cpp  name_value_pair.hxx  thread_pool.hxx  threadsafe_queue.hxx
src/gps/: gps.cpp  gps.hxx  gps_gateway.cpp  gps_gateway.hxx  nmea.cpp  nmea.h
src/model/: context.hxx  event.hxx  event_callback_container.hxx  process.hxx  process_node.hxx
src/script/: chaiscript_gateway.cpp  chaiscript_gateway.h
src/scripts/: gps.chai  main.chai~  main_cb.chai  servo.chai
src/serial/: serial.hxx  serial_gateway.hxx
src/servo/: servo_gateway.hxx
test/: ContextTest.hxx  EventCallbackTest.h  ProcessTest.hxx  jstest.h  test.cpp  test_configuration.hxx  test_serial_gateway.hxx
test/scripts/: test.chai
